--- a/styles.css
+++ b/styles.css
@@ -181,11 +181,20 @@ svg {
 
     .container { 
         height: auto; 
-        padding: 3rem;
+        padding: 15rem;
     }
 
     .card-container {
         display: flex;
         flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .html { font-size: 30%; }
+
+    .container { 
+        height: auto; 
+        padding: 3rem;
     }
 }
